--- a/templates/store/categories.html
+++ b/templates/store/categories.html
@@ -44,33 +44,33 @@
             <div class="row text-center">
               <div class="col-lg-4 mb-3 mb-lg-0">
                 <div class="d-inline-block">
-                  <div class="media align-items-end">
+                  <div class="media align-items-end text-dark">
                     <svg class="svg-icon svg-icon-big svg-icon-light">
                       <use xlink:href="#delivery-time-1"> </use>
                     </svg>
                     <div class="media-body text-left ml-3">
-                      <h6 class="text-uppercase mb-1">Безкоштовна доставка</h6>
-                      <p class="text-small mb-0 text-muted">Безкоштовна доставка по всьому світу</p>
+                      <h6 class="text-uppercase mb-1 text-dark">Безкоштовна доставка</h6>
+                      <p class="text-small mb-0 text-muted text-dark">Безкоштовна доставка по всьому світу</p>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4 mb-3 mb-lg-0">
                 <div class="d-inline-block">
-                  <div class="media align-items-end">
+                  <div class="media align-items-end text-dark">
                     <svg class="svg-icon svg-icon-big svg-icon-light">
                       <use xlink:href="#helpline-24h-1"> </use>
                     </svg>
                     <div class="media-body text-left ml-3">
-                      <h6 class="text-uppercase mb-1">24 x 7 обслуговування</h6>
-                      <p class="text-small mb-0 text-muted">Безкоштовна доставка по всьому світу</p>
+                      <h6 class="text-uppercase mb-1 text-dark">24 x 7 обслуговування</h6>
+                      <p class="text-small mb-0 text-muted text-dark">Безкоштовна доставка по всьому світу</p>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="d-inline-block">
-                  <div class="media align-items-end">
+                  <div class="media align-items-end text-dark">
                     <svg class="svg-icon svg-icon-big svg-icon-light">
                       <use xlink:href="#label-tag-1"> </use>
                     </svg>
