--- a/templates/footer.html
+++ b/templates/footer.html
@@ -12,9 +12,12 @@
             </div>
             <div class="col-12 col-md-4">
                 <h3>Контакти</h3>
-                <p>Адреса: м.Дніпро, вул. Бебра, 123</p>
-                  <li>Телефон: +380 98 493 00 74</li>
-                <p>Email <a href="https://mail.google.com/" target="_blank">michailo.zaichenko@gmail.com</a></p>
+                <ul>
+                    <li><p>Адреса: м.Дніпро, вул. Бебра, 123</p></li>
+                    <li>Телефон: +380 98 493 00 74</li>
+                    <li><p>Email <a href="https://mail.google.com/" target="_blank">michailo.zaichenko@gmail.com</a></p>
+                    </li>
+                </ul>
             </div>
             <div class="col-12 col-md-4">
                 <h3>Посилання</h3>
@@ -28,11 +31,11 @@
         </div>
     </div>
     <div class="credits">
-        <p >© 2023 Вело Магазин</p>
+        <p>© 2023 Вело Магазин</p>
     </div>
-              <div class="col-lg-6 text-lg-right">
-                <p class="small text-muted mb-0">Сайт зроблений <a class="text-white reset-anchor"
-                                                               href="https://www.linkedin.com/in/michailo-zaichenko-a90048266/"
-                                                               target="_blank">Михайлом Зайченко</a></p>
-              </div>
+    <div class="col-lg-6 text-lg-right">
+        <p class="small text-muted mb-0">Сайт зроблений <a class="text-white reset-anchor"
+                                                           href="https://www.linkedin.com/in/michailo-zaichenko-a90048266/"
+                                                           target="_blank">Михайлом Зайченко</a></p>
+    </div>
 </footer>
