--- a/templates/store/index.html
+++ b/templates/store/index.html
@@ -10,10 +10,10 @@
     <div class="container">
 
         <!-- BIKE CAROUSEL SECTION -->
-        <section class="py-5 bg-light">
+        <section class="py-5">
             <div class="container">
                 <header>
-                    <h2 class="h5 text-uppercase mb-4">Наші велосипеди</h2>
+                    <h1 class="h5 text-uppercase mb-4">Наші велосипеди:</h1>
                 </header>
                 <div class="row">
                     <div class="col-lg-12">
