--- a/templates/store/orders.html
+++ b/templates/store/orders.html
@@ -14,7 +14,7 @@
                 <div class="card mb-4" id="tables">
                     <div class="card-header text-center">Замовлення</div>
                     <div class="card-body">
-                        <table class="table table-hover">
+                        <table class="table">
                             <thead>
                             <tr>
                                 <th>#</th>
