--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -21,7 +21,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'store:home' %}"><span class="custom-text">WellBike</span></a>
+                        <a class="nav-link active" href="{% url 'store:home' %}"><span
+                                class="custom-text">WellBike</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'store:main' %}">Як обрати велосипед?</a>
@@ -52,6 +53,25 @@
                     </li>
                     <li>
                         <div id="toggle-theme" class="btn btn-primary">🌣</div>
+                    </li>
+                    <li>
+                        {% load i18n %}
+
+                        <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
+                            <input name="next" type="hidden" value="{{ redirect_to }}">
+                            <select name="language">
+                                {% get_current_language as LANGUAGE_CODE %}
+                                {% get_available_languages as LANGUAGES %}
+                                {% get_language_info_list for LANGUAGES as languages %}
+                                {% for language in languages %}
+                                    <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %}
+                                            selected{% endif %}>
+                                        {{ language.name_local }} ({{ language.code }})
+                                    </option>
+                                {% endfor %}
+                            </select>
+                            <input type="submit" value="Go">
+                        </form>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
@@ -91,4 +111,4 @@
 </header>
 {% block script %}
     <script src="{% static 'js/button_back_col.js' %}" type="text/javascript"></script>
-{% endblock script%}
+{% endblock script %}
