--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-
+{% load i18n %}
 {% block head %}
     <link href="{% static 'css/header.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/button_back_col.css' %}" rel="stylesheet" type="text/css">
@@ -25,14 +25,14 @@
                                 class="custom-text">WellBike</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'store:main' %}">Як обрати велосипед?</a>
+                        <a class="nav-link" href="{% url 'store:main' %}">{% translate 'Як обрати?' %}</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'store:home' %}">Головна</a>
+                        <a class="nav-link" href="{% url 'store:home' %}">{% translate 'Головна' %}</a>
                     </li>
                     <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="pagesDropdown" href="#"
                                                      data-toggle="dropdown" aria-haspopup="true"
-                                                     aria-expanded="false">Крамниця</a>
+                                                     aria-expanded="false">{% trans 'Крамниця' %}</a>
                         <div class="dropdown-menu mt-3" aria-labelledby="pagesDropdown">
                             {% if categories_menu %}
                                 {% for cat_menu in categories_menu %}
@@ -41,43 +41,47 @@
                                 {% endfor %}
                             {% endif %}
                             <hr>
-                            <a class="dropdown-item border-0 transition-link" href="{% url 'store:all-categories' %}">Всі
-                                категорії</a>
+                            <a class="dropdown-item border-0 transition-link"
+                               href="{% url 'store:all-categories' %}">{% trans 'Всі категорії' %}</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'store:contacts' %}">Контакти</a>
+                        <a class="nav-link" href="{% url 'store:contacts' %}">{% trans "Контакти" %}</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'store:about' %}">Про нас</a>
+                        <a class="nav-link" href="{% url 'store:about' %}"> {% trans "Про нас" %}</a>
                     </li>
-                    <li>
+                    <li class="nav-item">
                         <div id="toggle-theme" class="btn btn-primary">🌣</div>
                     </li>
-                    <li>
+                    <li class="nav-item">
                         {% load i18n %}
-
-                        <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
+                        <form action="{% url 'set_language' %}" method="post" class="form-inline">
+                            {% csrf_token %}
                             <input name="next" type="hidden" value="{{ redirect_to }}">
-                            <select name="language">
-                                {% get_current_language as LANGUAGE_CODE %}
-                                {% get_available_languages as LANGUAGES %}
-                                {% get_language_info_list for LANGUAGES as languages %}
-                                {% for language in languages %}
-                                    <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %}
-                                            selected{% endif %}>
-                                        {{ language.name_local }} ({{ language.code }})
-                                    </option>
-                                {% endfor %}
-                            </select>
-                            <input type="submit" value="Go">
+                            <div class="input-group">
+                                <select name="language" class="form-control">
+                                    {% get_current_language as LANGUAGE_CODE %}
+                                    {% get_available_languages as LANGUAGES %}
+                                    {% get_language_info_list for LANGUAGES as languages %}
+                                    {% for language in languages %}
+                                        <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %}
+                                                selected{% endif %}>
+                                            {{ language.name_local }} ({{ language.code }})
+                                        </option>
+                                    {% endfor %}
+                                </select>
+                                <div class="input-group-append">
+                                    <button type="submit" class="btn btn-primary">Go</button>
+                                </div>
+                            </div>
                         </form>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     {% if request.user.is_authenticated %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'store:cart' %}"> <i
-                                class="fas fa-dolly-flatbed mr-1 text-gray"></i>Кошик<small
+                                class="fas fa-dolly-flatbed mr-1 text-gray"></i> {% trans 'Кошик' %}<small
                                 class="text-gray">({{ cart_items.count }})</small></a></li>
 
                         <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="pagesDropdown" href="#"
@@ -87,21 +91,21 @@
 
                             <div class="dropdown-menu mt-3" aria-labelledby="pagesDropdown">
 
-                                <a class="dropdown-item border-0 transition-link" href="{% url 'store:profile' %}">Профіль</a>
+                                <a class="dropdown-item border-0 transition-link" href="{% url 'store:profile' %}">{% trans 'Профіль' %}</a>
                                 <a class="dropdown-item border-0 transition-link"
-                                   href="{% url 'store:cart' %}">Кошик</a>
-                                <a class="dropdown-item border-0 transition-link" href="{% url 'store:orders' %}">Замовлення</a>
+                                   href="{% url 'store:cart' %}">{% trans 'Кошик' %}</a>
+                                <a class="dropdown-item border-0 transition-link" href="{% url 'store:orders' %}">{% trans 'Замовлення' %}</a>
                                 <a class="dropdown-item border-0 transition-link" href="
-{% url 'store:password-change' %}">Змінити пароль</a>
+{% url 'store:password-change' %}"> {% trans 'Змінити пароль' %}</a>
 
                                 <hr>
                                 <a class="dropdown-item border-0 transition-link"
-                                   href="{% url 'store:logout' %}">Вийти</a>
+                                   href="{% url 'store:logout' %}">{% trans 'Вийти' %}</a>
                             </div>
                         </li>
                     {% else %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'store:login' %}">Увійти</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'store:register' %}">Створити акаунт</a>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'store:login' %}">{% trans 'Увійти' %}</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'store:register' %}">{% trans 'Створити акаунт' %}</a>
                         </li>
                     {% endif %}
                 </ul>
