--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -103,10 +103,10 @@
                             </table>
                         </div>
                         <!-- CART NAV-->
-                        <div class="bg-light px-4 py-3">
+                        <div class="px-4 py-3">
                             <div class="row align-items-center text-center">
                                 <div class="col-md-6 mb-3 mb-md-0 text-md-left"><a
-                                        class="btn btn-link p-0 text-dark btn-sm"
+                                        class="btn btn-link p-0 btn-sm"
                                         href="{% url 'store:all-categories' %}"><i class="fas
                                                                      fa-long-arrow-alt-left mr-2">
                                 </i>Продовжити подорож магазином</a></div>
@@ -190,7 +190,7 @@
 
                                         {% comment %} For Cash on Delivery {% endcomment %}
                                         <button type="submit" class="btn btn-dark btn-lg btn-outline-dark"
-                                                type="submit"><i class="fas fa-dollar-sign mr-2"></i>Перевітики
+                                                type="submit"><i class="fas fa-dollar-sign mr-2"></i>Перевірити
                                             реквізити
                                         </button>
                                     {% endif %}
