--- a/store/templates/account/profile.html
+++ b/store/templates/account/profile.html
@@ -80,7 +80,7 @@
                 <div class="card mb-4" id="tables">
                     <div class="card-header">Замовлення</div>
                     <div class="card-body">
-                        <table class="table table-hover">
+                        <table class="table">
                             <thead>
                             <tr>
                                 <th>#</th>
