--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -82,11 +82,11 @@
                                                     <a href="{% url 'store:minus-cart' cart_product.id %}"
                                                        class="dec-btn p-0 ml-2"><i class="fas fa-minus"></i></a>
                                                     {% comment %} <button class="dec-btn p-0"><i class="fas fa-caret-left"></i></button> {% endcomment %}
-                                                    <input class="form-control form-control-sm border-0 shadow-0 p-0"
-                                                           type="text" value="{{ cart_product.quantity }}"/>
+                                                     <span style="font-size: 14px; font-family: inherit; margin: 0 4px 0 4px" class="cart-quantity">{{ cart_product.quantity }}</span>
                                                     {% comment %} <button class="inc-btn p-0"><i class="fas fa-caret-right"></i></button> {% endcomment %}
                                                     <a href="{% url 'store:plus-cart' cart_product.id %}"
-                                                       class="inc-btn p-0"><i class="fas fa-plus"></i></a>
+                                                       class="inc-btn p-0"><i
+                                                            class="fas fa-plus"></i></a>
                                                 </div>
                                             </div>
                                         </td>
@@ -128,15 +128,18 @@
                                 <ul class="list-unstyled mb-0">
                                     <li class="d-flex align-items-center justify-content-between"><strong
                                             class="text-uppercase small font-weight-bold text-dark">Проміжний
-                                        підсумок</strong><span class="text-muted small text-dark">${{ amount|intcomma }}</span>
+                                        підсумок</strong><span
+                                            class="text-muted small text-dark">${{ amount|intcomma }}</span>
                                     </li>
                                     <li class="d-flex align-items-center justify-content-between"><strong
                                             class="text-uppercase small font-weight-bold text-dark">Вартість
-                                        доставки</strong><span class="text-muted small text-dark">+ ${{ shipping_amount }}</span>
+                                        доставки</strong><span
+                                            class="text-muted small text-dark">+ ${{ shipping_amount }}</span>
                                     </li>
                                     <li class="border-bottom my-2"></li>
                                     <li class="d-flex align-items-center justify-content-between mb-4"><strong class="text-uppercase
-                    small font-weight-bold text-dark">Всього</strong><span class="text-dark">${{ total_amount|intcomma }}</span></li>
+                    small font-weight-bold text-dark">Всього</strong><span
+                                            class="text-dark">${{ total_amount|intcomma }}</span></li>
                                     <li>
 
                                         {% comment %} <form action="#">
@@ -186,12 +189,11 @@
                                         </div>
                                     {% endif %}
                                     {% if addresses and paying_ways %}
-                                        <div class="text-end" id="paypal-button-container"></div>
+
 
                                         {% comment %} For Cash on Delivery {% endcomment %}
-                                        <button type="submit" class="btn btn-dark btn-lg btn-outline-dark"
-                                                type="submit"><i class="fas fa-dollar-sign mr-2"></i>Перевірити
-                                            реквізити
+                                        <button type="submit" class="btn btn-dark btn-lg btn-outline-dark">
+                                            <i class="fas fa-dollar-sign mr-2"></i>Зробити замолення
                                         </button>
                                     {% endif %}
                                 </form>
