--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -10,7 +10,7 @@
             <div class="container">
                 <div class="row px-4 px-lg-5 py-lg-4 align-items-center">
                     <div class="col-lg-6">
-                        <h1 class="h2 text-uppercase mb-0 text-dark">Перевірити</h1>
+                        <h1 class="h2 text-uppercase mb-0 text-dark">Замовлення зараховано</h1>
                     </div>
                     <div class="col-lg-6 text-lg-right">
                         <nav aria-label="breadcrumb">
@@ -59,41 +59,33 @@
                                 {% endfor %}
                             </div>
                             <div class="col-lg-6 form-group">
-                                    <b><label class="text-small text-uppercase" for="city">Номер картки</label></b>
-                                    {% for paying_way in paying_ways %}
-                                        <div>{{ paying_way.card_number }}</div>
-                                    {% endfor %}
+                                <b><label class="text-small text-uppercase" for="city">Номер картки</label></b>
+                                {% for paying_way in paying_ways %}
+                                    <div>{{ paying_way.card_number }}</div>
+                                {% endfor %}
                             </div>
                             <div class="col-lg-12 form-group">
                                 {#                                <button  class="btn btn-dark" type="submit">Зробити замовлення</button>#}
-                                <a href="{% url 'store:orders' %}" class="btn btn-primary rounded">Зробити замовлення</a>
+                                <a href="{% url 'store:orders' %}" class="btn btn-primary rounded">Подивитися на стан
+                                    замовлення</a>
 
                             </div>
                         </div>
                     </form>
                 </div>
                 <!-- ORDER SUMMARY-->
-                {#                <div class="col-lg-4">#}
-                {#                    <div class="card border-0 rounded-0 p-lg-4 bg-light">#}
-                {#                        <div class="card-body">#}
-                {#                            <h5 class="text-uppercase mb-4">Ваше замовлення</h5>#}
-                {#                            <ul class="list-unstyled mb-0">#}
-                {#                                <li class="d-flex align-items-center justify-content-between"><strong#}
-                {#                                        class="text-uppercase small font-weight-bold">Проміжний#}
-                {#                                    підсумок</strong><span class="text-muted small">${{ amount|intcomma }}</span>#}
-                {#                                </li>#}
-                {#                                <li class="d-flex align-items-center justify-content-between"><strong#}
-                {#                                        class="text-uppercase small font-weight-bold">Вартість#}
-                {#                                    доставки</strong><span class="text-muted small">+ ${{ shipping_amount }}</span>#}
-                {#                                </li>#}
-                {#                                <li class="border-bottom my-2"></li>#}
-                {#                                <li class="d-flex align-items-center justify-content-between mb-4"><strong class="text-uppercase#}
-                {#                    small font-weight-bold">Всього</strong><span>${{ total_amount|intcomma }}</span></li>#}
-                {#                                <li>#}
-                {#                            </ul>#}
-                {#                        </div>#}
-                {#                    </div>#}
-                {#                </div>#}
+                <div class="col-lg-4 mt-0">
+                    <div class="card border-0 rounded-0 p-lg-4">
+                        <div class="card-body">
+                            <h5 class="text-uppercase mb-4">Ваше замовлення було зараховано</h5>
+                            <div class="p-light-grey-text mt-3 mb-3">Чекайте на дзвінок чи на листа від нашого менеджера</div>
+                            <img src="{% static "img/png-transparent-heart-sketch-heart-love-text-description-removebg-preview (3).png" %}"
+                                 alt="heart" class="img-fluid">
+                            <div class="p-light-grey-text mt-3">Дякую, що вибираєте нас!</div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </section>
     </div>
