--- a/store/templates/store/orders.html
+++ b/store/templates/store/orders.html
@@ -12,7 +12,7 @@
 
             <div class="col-lg-12">
                 <div class="card mb-4" id="tables">
-                    <div class="card-header text-center">Замовлення</div>
+                    <h4 class="card-header text-center">Замовлення</h4>
                     <div class="card-body">
                         <table class="table">
                             <thead>
