add caches and postgressdb

--- a/store/templates/store/category_products.html
+++ b/store/templates/store/category_products.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% load cache %}
+{#{% load cache %}#}
 
 {% block head %}
     <link href="{% static 'css/sorting.css' %}" rel="stylesheet" type="text/css">
