--- a/store/templates/navbar.html
+++ b/store/templates/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% load i18n %}
-{#{% load cache %}#}
+{% load cache %}
 {% block head %}
     <link href="{% static 'css/header.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/button_back_col.css' %}" rel="stylesheet" type="text/css">
@@ -35,14 +35,14 @@
                                                      data-toggle="dropdown" aria-haspopup="true"
                                                      aria-expanded="false">{% trans 'Крамниця' %}</a>
                         <div class="dropdown-menu mt-3" aria-labelledby="pagesDropdown">
-{#                            {% cache 604800 categorie_list %}#}
+                            {% cache 604800 categorie_list %}
                                 {% if categories_menu %}
                                     {% for cat_menu in categories_menu %}
                                         <a class="dropdown-item border-0 transition-link"
                                            href="{% url 'store:category-products' cat_menu.slug %}">{{ cat_menu.title }}</a>
                                     {% endfor %}
                                 {% endif %}
-{#                            {% endcache %}#}
+                            {% endcache %}
                             <hr>
                             <a class="dropdown-item border-0 transition-link"
                                href="{% url 'store:all-categories' %}">{% trans 'Всі категорії' %}</a>
