--- a/store/templates/navbar.html
+++ b/store/templates/navbar.html
@@ -45,7 +45,7 @@
                             {% endcache %}
                             <hr>
                             <a class="dropdown-item border-0 transition-link"
-                               href="{% url 'store:all-categories' %}"> Всі категорії' %}</a>
+                               href="{% url 'store:all-categories' %}">Всі категорії</a>
                         </div>
                     </li>
                     <li class="nav-item">
