--- a/store/templates/store/category_products.html
+++ b/store/templates/store/category_products.html
@@ -87,16 +87,16 @@
 
                                                 <div class="badge text-white badge-"></div>
 
-                                                <a class="d-block" style="max-height: 170px; margin-bottom: 5px;" href=
+                                                <a class="d-block" style="min-height: 150px; margin-bottom: 5px;" href=
                                                         "{% url 'store:product-detail' product.slug %}">
                                                     {% if product.product_image %}
                                                         <img class="img-fluid w-100"
-                                                             style="max-height: 170px; margin-bottom: 5px;"
+                                                             style="min-height: 130px; max-height: 170px; margin-bottom: 5px;"
                                                              src="{{ product.product_image.url }}"
                                                              alt="{{ product.title }}">
                                                     {% else %}
                                                         <img class="img-fluid w-100"
-                                                             style="max-height: 170px; margin-bottom: 5px;"
+                                                             style="min-height: 130px; max-height: 170px; margin-bottom: 5px;"
                                                              src="{% static 'img/not_img.png' %}"
                                                              alt="{{ product.title }}">
                                                     {% endif %}
