--- a/staticfile/css/style.gold.css
+++ b/staticfile/css/style.gold.css
@@ -3327,6 +3327,10 @@ code {
   background: rgba(0, 0, 0, 0.2);
 }
 
+img {
+  border-radius: 10px;
+}
+
 .card-img {
   border-radius: calc(0 - 1px);
 }
